spec/fixtures/haxe_projects/fail_compile/compile.hxml
-js main.js
-mian Main